[tool.poetry]
name = "tg_radio"
version = "0.1.0"
description = ""
authors = ["artemletunovskij <artemlyc3@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.19"
mutagen = "^1.45.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

